// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemStatusCard should not render hasLastCheckIn 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-4"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        System status
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Current state
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Active
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Registered
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Apr 2014 00:00 UTC
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          RHC
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Connected
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`SystemStatusCard should not render hasRHC 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-6"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        System status
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Current state
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Active
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Registered
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Apr 2014 00:00 UTC
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last upload
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Jun 2014 00:00 UTC
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`SystemStatusCard should not render hasRegistered 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-5"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        System status
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Current state
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Active
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last upload
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Jun 2014 00:00 UTC
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          RHC
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Connected
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`SystemStatusCard should not render hasState 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-3"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        System status
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Registered
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Apr 2014 00:00 UTC
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last upload
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Jun 2014 00:00 UTC
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          RHC
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Connected
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`SystemStatusCard should render correctly - no data 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-1"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        System status
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Current state
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Registered
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last upload
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          RHC
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`SystemStatusCard should render correctly with data 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-2"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        System status
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Current state
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Active
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Registered
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Apr 2014 00:00 UTC
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last upload
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Jun 2014 00:00 UTC
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          RHC
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Connected
        </dd>
      </dl>
    </div>
  </div>
</div>
`;
